--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,17 @@
   <title>Clear View Escapes</title>
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  
+  <!-- CSS -->
+  <link rel="stylesheet" href="./temp/css/app.css">
+
+  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+
 </head>
 <body>
+  
+  <!-- ::HEADER SECTION
+  ======================================== -->
   <header>
     <img src="assets/images/icons/clear-view-escapes.svg">
     <a href="#">Get in Touch</a>
@@ -19,7 +28,9 @@
       </ul>
     </nav>
   </header>
-
+  
+  <!-- ::HERO SECTION
+  ======================================== -->
   <div class="large-hero">
     <img src="assets/images/hero--large.jpg">
     <h1>Your clarity.</h1>
