--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
   ======================================== -->
   <header>
     <img src="assets/images/icons/clear-view-escapes.svg">
-    <a href="#">Get in Touch</a>
+    <a class="btn" href="#">Get in Touch</a>
     <nav>
       <ul>
         <li><a href="#our-beginning">Our Beginning</a></li>
