--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
       <h1 class="large-hero__title">Your clarity.</h1>
       <h2 class="large-hero__subtitle">One trip away.</h2>
       <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
-      <p><a href="#">Get Started Today</a></p>
+      <p><a class="btn btn--orange btn--large" href="#">Get Started Today</a></p>
     </div><!-- //large-hero__text-content END -->
   </div><!-- //.large-hero END -->
 
@@ -91,9 +91,11 @@
     <h3>6 Time Escaper</h3>
     <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
   </div>
-
+  
+  <!-- ::FOOTER SECTION
+  ======================================== -->
   <footer>
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#">Get in Touch</a></p>
-  </footer>
+    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a class="btn btn--orange" href="#">Get in Touch</a></p>
+  </footer><!-- //footer END -->
 </body>
 </html>
