--- a/app/index.html
+++ b/app/index.html
@@ -15,16 +15,29 @@
   
   <!-- ::HEADER SECTION
   ======================================== -->
-  <header>
-    <img src="assets/images/icons/clear-view-escapes.svg">
-    <a class="btn" href="#">Get in Touch</a>
-    <nav>
-      <ul>
-        <li><a href="#our-beginning">Our Beginning</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="wrapper">
+      <div class="site-header__logo">
+        <div class="site-header__logo__graphic icon icon--clear-view-escapes">Clear View Escapes</div>
+      </div><!-- //site-header__logo END -->
+
+      <div class="site-header__menu-icon">
+        
+      </div><!-- //site-header__menu-icon END -->
+
+      <div class="site-header__menu-content">
+        <div class="site-header__btn-container">
+          <a class="btn" href="#">Get in Touch</a>
+        </div><!-- //site-header__btn-container END -->
+        <nav class="primary-nav primary-nav--pull-right">
+          <ul>
+            <li><a href="#our-beginning">Our Beginning</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+          </ul>
+        </nav>
+      </div><!-- //site-header__menu-contentEND  -->
+    </div><!-- //wrapper END -->
   </header>
   
   <!-- ::HERO SECTION
