--- a/app/index.html
+++ b/app/index.html
@@ -187,6 +187,10 @@
       <p><span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span> <a class="btn btn--orange" href="#">Get in Touch</a></p>
     </div><!-- //wrapper -->
   </footer><!-- //footer END -->
+
+  <!-- ::WEBPACK JAVASCRIPT
+  ======================================== -->
+  <script type="text/javascript" src="/temp/scripts/app.js"></script>
 </body>
 </html>
 
