finished the styling of the menu icon with CSS and jQuery

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
       </div><!-- //site-header__logo END -->
 
       <div class="site-header__menu-icon">
-        
+        <div class="site-header__menu-icon__middle"></div><!-- //site-header__icon__middle -->
       </div><!-- //site-header__menu-icon END -->
 
       <div class="site-header__menu-content">
@@ -38,7 +38,7 @@
         </nav>
       </div><!-- //site-header__menu-contentEND  -->
     </div><!-- //wrapper END -->
-  </header>
+  </header><!-- //header END -->
   
   <!-- ::HERO SECTION
   ======================================== -->
