--- a/app/index.html
+++ b/app/index.html
@@ -184,7 +184,7 @@
   ======================================== -->
   <footer class="site-footer">
     <div class="wrapper">
-      <p><span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span> <a class="btn btn--orange" href="#">Get in Touch</a></p>
+      <p><span class="site-footer__text">Copyright &copy; <span class="stite-footer__year">2016</span> Clear View Escapes. All rights reserved.</span> <a class="btn btn--orange" href="#">Get in Touch</a></p>
     </div><!-- //wrapper -->
   </footer><!-- //footer END -->
 
