--- a/app/index.html
+++ b/app/index.html
@@ -31,9 +31,9 @@
         </div><!-- //site-header__btn-container END -->
         <nav class="primary-nav primary-nav--pull-right">
           <ul>
-            <li><a href="#our-beginning">Our Beginning</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#our-beginning" id="our_beginning_link">Our Beginning</a></li>
+            <li><a href="#features" id="features_link">Features</a></li>
+            <li><a href="#testimonials" id="testimonials_link">Testimonials</a></li>
           </ul>
         </nav>
       </div><!-- //site-header__menu-contentEND  -->
@@ -62,7 +62,7 @@
   
   <!-- ::OUR BEGINNING SECTION
   ======================================== -->
-  <div id="our-beginning" class="page-section">
+  <div id="our-beginning" class="page-section" data-matching-link="#our_beginning_link">
     <div class="wrapper">
       <h2 class="headline headline--centered headline--light headline--b-margin-small">The first trip we planned <strong>was our own.</strong></h2>
       <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
@@ -95,7 +95,7 @@
   
   <!-- ::FEATURES SECTION
   ======================================== -->
-  <div id="features" class="page-section page-section--blue">
+  <div id="features" class="page-section page-section--blue" data-matching-link="#features_link">
     <div class="wrapper">
       
       <h2 class="section-title"><span class="icon icon--star section-title__icon"></span> Our <strong>Features</strong></h2>
@@ -138,7 +138,7 @@
   
   <!-- ::TESTIMONIALS SECTION
   ======================================== -->
-  <div id="testimonials" class="page-section page-section--testimonials page-section--no-b-padding-until-large">
+  <div id="testimonials" class="page-section page-section--testimonials page-section--no-b-padding-until-large" data-matching-link="#testimonials_link">
     <div class="wrapper wrapper--no-padding-until-large">
       
       <h2 class="section-title section-title--blue"><span class="icon icon--comment section-title__icon"></span> Real <strong>Testimonials</strong></h2>
