created the initial files for modal window

--- a/app/index.html
+++ b/app/index.html
@@ -188,6 +188,10 @@
     </div><!-- //wrapper -->
   </footer><!-- //footer END -->
 
+  <div class="modal">
+    <h2>Get in Touch</h2>
+  </div><!-- //modal END -->
+
   <!-- ::WEBPACK JAVASCRIPT
   ======================================== -->
   <script type="text/javascript" src="/temp/scripts/app.js"></script>
