added styles to the modal window, created _social-icons.css

--- a/app/index.html
+++ b/app/index.html
@@ -189,7 +189,17 @@
   </footer><!-- //footer END -->
 
   <div class="modal">
-    <h2>Get in Touch</h2>
+    <h2 class="section-title section-title--blue section-title--less-margin"><span class="icon icon--mail section-title__icon"></span> <strong>Get in</strong> Touch</h2>
+    <div class="wrapper wrapper--narrow">
+      <p class="modal__description">We will have an online order system in place soon. Until then, connect with us on any of the platform below.</p>
+    </div><!-- //wrapper END -->
+
+    <div class="social-icons">
+      <a href="#" class="social-icons__icon"><span class="icon icon--facebook"></span></a>
+      <a href="#" class="social-icons__icon"><span class="icon icon--twitter"></span></a>
+      <a href="#" class="social-icons__icon"><span class="icon icon--instagram"></span></a>
+      <a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a>
+    </div><!-- //social-icons END  -->
   </div><!-- //modal END -->
 
   <!-- ::WEBPACK JAVASCRIPT
