--- a/app/index.html
+++ b/app/index.html
@@ -187,20 +187,27 @@
       <p><span class="site-footer__text">Copyright &copy; <span class="stite-footer__year">2016</span> Clear View Escapes. All rights reserved.</span> <a class="btn btn--orange" href="#">Get in Touch</a></p>
     </div><!-- //wrapper -->
   </footer><!-- //footer END -->
-
+  
+  <!-- ::MODAL WINDOW
+  ======================================== -->
   <div class="modal">
-    <h2 class="section-title section-title--blue section-title--less-margin"><span class="icon icon--mail section-title__icon"></span> <strong>Get in</strong> Touch</h2>
-    <div class="wrapper wrapper--narrow">
-      <p class="modal__description">We will have an online order system in place soon. Until then, connect with us on any of the platform below.</p>
-    </div><!-- //wrapper END -->
+    <div class="modal__inner">
+      <h2 class="section-title section-title--blue section-title--less-margin"><span class="icon icon--mail section-title__icon"></span> <strong>Get in</strong> Touch</h2>
+      <div class="wrapper wrapper--narrow">
+        <p class="modal__description">We will have an online order system in place soon. Until then, connect with us on any of the platform below.</p>
+      </div><!-- //wrapper END -->
 
-    <div class="social-icons">
-      <a href="#" class="social-icons__icon"><span class="icon icon--facebook"></span></a>
-      <a href="#" class="social-icons__icon"><span class="icon icon--twitter"></span></a>
-      <a href="#" class="social-icons__icon"><span class="icon icon--instagram"></span></a>
-      <a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a>
-    </div><!-- //social-icons END  -->
+      <div class="social-icons">
+        <a href="#" class="social-icons__icon"><span class="icon icon--facebook"></span></a>
+        <a href="#" class="social-icons__icon"><span class="icon icon--twitter"></span></a>
+        <a href="#" class="social-icons__icon"><span class="icon icon--instagram"></span></a>
+        <a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a>
+      </div><!-- //social-icons END  -->
+    </div><!-- //modal__inner END -->
+  
+    <div class="modal__close">X</div><!-- //modal_close END -->
   </div><!-- //modal END -->
+
 
   <!-- ::WEBPACK JAVASCRIPT
   ======================================== -->
