--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 
       <div class="site-header__menu-content">
         <div class="site-header__btn-container">
-          <a class="btn" href="#">Get in Touch</a>
+          <a class="btn open-modal" href="#">Get in Touch</a>
         </div><!-- //site-header__btn-container END -->
         <nav class="primary-nav primary-nav--pull-right">
           <ul>
@@ -55,7 +55,7 @@
         <h1 class="large-hero__title">Your clarity.</h1>
         <h2 class="large-hero__subtitle">One trip away.</h2>
         <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
-        <p><a class="btn btn--orange btn--large" href="#">Get Started Today</a></p>
+        <p><a class="btn btn--orange btn--large open-modal" href="#">Get Started Today</a></p>
       </div><!-- //wrapper END -->
     </div><!-- //large-hero__text-content END -->
   </div><!-- //.large-hero END -->
@@ -184,7 +184,7 @@
   ======================================== -->
   <footer class="site-footer">
     <div class="wrapper">
-      <p><span class="site-footer__text">Copyright &copy; <span class="stite-footer__year">2016</span> Clear View Escapes. All rights reserved.</span> <a class="btn btn--orange" href="#">Get in Touch</a></p>
+      <p><span class="site-footer__text">Copyright &copy; <span class="stite-footer__year">2016</span> Clear View Escapes. All rights reserved.</span> <a class="btn btn--orange open-modal" href="#">Get in Touch</a></p>
     </div><!-- //wrapper -->
   </footer><!-- //footer END -->
   
