fixes html referrence to css, js files

--- a/app/index.html
+++ b/app/index.html
@@ -8,12 +8,12 @@
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
   
   <!-- CSS -->
-  <!-- build:css /assets/css/app.css -->
+  <!-- build:css assets/css/app.css -->
   <link rel="stylesheet" href="./temp/css/app.css">
   <!-- endbuild -->
 
   <!-- VENDOR -->
-  <!-- build:js /assets/scripts/Vendor.js -->
+  <!-- build:js assets/scripts/Vendor.js -->
   <script type="text/javascript" src="/temp/scripts/Vendor.js"></script>
   <!-- endbuild -->
 
@@ -218,7 +218,7 @@
 
   <!-- ::WEBPACK JAVASCRIPT
   ======================================== -->
-  <!-- build:js /assets/scripts/app.js -->
+  <!-- build:js assets/scripts/app.js -->
   <script type="text/javascript" src="/temp/scripts/app.js"></script>
   <!-- endbuild -->
 </body>
